# v8-builder

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  build-v8.py  build-win.sh
.github/workflows/: build-v8-ios.yml  build-v8-rhel8.yml  build-v8.yml  release-watch.yml  validate-v8.yml
patches/: choc-v8.14.patch  v8-15.1-externalize-string-lto-workaround.patch  v8-15.1-sealed-shared-gn.patch  v8_embedder_exports.txt
planning/: 2026-06-05-android-plan.md  2026-06-05-ios-plan.md  2026-06-05-pulp-v8-integration-plan.md  HANDOFF.md  feature-requests.md  lkgr-lock.json  pulp-patch-P0.2.md  v8-builder-proposal.md  v8-builder-runbook.md
seal/: coff.py  coff_research.md  elf.py  macho.py  policy.json  test_coff_audit.py  test_elf_audit.py  test_macho_audit.py
tools/: check_single_sha.py  lkgr_pin.py  prefetch_gcs_https.py  run_tests.sh  test_check_single_sha.py  test_lean_packaging.py  test_win_libcxx.py
tools/rhel8/: Dockerfile  README.md  build-in-docker.sh  check_glibc_floor.py
validate/: CMakeLists.txt  identity_main.cpp  ios_identity_app.mm  run_validation.cmake  smoke_gpu.cpp
validate/android/: CMakeLists.txt  consumer_main.cpp  link_consumer.sh
validate/build-arm64/: CMakeCache.txt  Makefile  cmake_install.cmake
validate/build-x64/: CMakeCache.txt  Makefile  cmake_install.cmake
validate/ios/: CMakeLists.txt  run_ios_gate.py
